# streamsentinel

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
api/: deps.py  main.py  models.py  routes.py  websocket.py
features/: extractor.py  normalizer.py  schema.py
inference/: alerter.py  engine.py  scorer.py  worker.py
ingestion/: log_simulator.py  producer.py  schema.py
model/: autoencoder.py  threshold.py  train.py
observability/: metrics.py  prometheus.yml
storage/: postgres_client.py
